--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
         #wrap-center {
             width: 1280px;
             display: inline-block;
-            background-color: yellow;
         }
         #header {
             text-align: left;
@@ -185,12 +184,33 @@
             </div>
             <style>
                 #search > form {
-                    display: inline-block;
+                    display: inline-flex;
                     width: 708px;
                     height: 60px;
                     border: 1px solid #03c75a;
                     border-radius: 33px;
                     text-align: left;
+                }
+                #search-svg {
+                    display: inline-flex;
+                    width: 68px;
+                    height: 100%;
+                    justify-content: center;
+                    align-items: center;
+                }
+                #search-svg svg {
+                    width: 24px;
+                    height: 24px;
+                    fill: #03c75a;
+                }
+                #search-input {
+                    width: 480px;
+                    padding: 17px 0;
+                    font-size: 2rem;
+                    line-height: 24px;
+                    font-weight: bold;
+                    border: none;
+                    outline: none;
                 }
                 #search > form > input {
                     width: 480px;
@@ -199,12 +219,77 @@
                     border: none;
                     outline: none;
                 }
+                #search > form a {
+                    width: 68px;
+                    height: 100%;
+                    padding: 17px 16px 17px 27px;
+                    display: inline-block;
+                }
+                #search > form svg {
+                    width: 24px;
+                    height: 24px;
+                }
+                #search-right {
+                    display: flex;
+                    flex: 1;
+                    justify-content: flex-end;
+                    align-items: stretch;
+                }
+                #search-keyboard, #search-recent, #search-button {
+                    background: transparent;
+                    border: none;
+                    cursor: pointer;
+                    outline: none;
+                }
+                #search-keyboard::before {
+                    content: "";
+                    display: block;
+                    background-image: url(https://pm.pstatic.net/resources/asset/sp_main.74b52318.png);
+                    background-size: 444px 434px;
+                    background-position: -199px -254px;
+                    background-repeat: no-repeat;
+                    width: 24px;
+                    height: 14px;
+                }
+                #search-recent::before {
+                    content: "";
+                    display: block;
+                    background-image: url(https://pm.pstatic.net/resources/asset/sp_main.74b52318.png);
+                    background-size: 444px 434px;
+                    background-position: -102px -272px;
+                    background-repeat: no-repeat;
+                    width: 10px;
+                    height: 6px;
+                }
+                #search-button::before {
+                    content: "";
+                    display: inline-block;
+                    background-image: url(https://pm.pstatic.net/resources/asset/sp_main.74b52318.png);
+                    background-size: 422px 405px;
+                    background-position: -344px -171px;
+                    background-repeat: no-repeat;
+                    width: 25px;
+                    height: 25px;
+                }
             </style>
             <div id="search">
                 <form action="">
+                    <a id="search-svg" href="#">
+                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16.273 12.845 7.376 0H0v24h7.727V11.155L16.624 24H24V0h-7.727v12.845z"></path></svg>
+                    </a>
                     <label for="search-input" class="blind">검색어 입력</label>
-                    <input id="search-input" type="text"/>
-                    <button class="blind">검색</button>
+                    <input id="search-input" type="text" placeholder="검색어를 입력하세요."/>
+                    <div id="search-right">
+                        <button href="#" id="search-keyboard">
+                            <span class="blind">입력도구</span>
+                        </button>
+                        <button href="#" id="search-recent">
+                            <span class="blind">자동완성/최근검색어펼치기</span>
+                        </button>
+                        <button id="search-button">
+                            <div><span class="blind">검색</span></div>
+                        </button>
+                    </div>
                 </form>
             </div>
             <div id="nav"></div>
